# simulation

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
backend/: CMakeLists.txt
backend/src/: GridController.cc  GridController.h  GridSim.cc  GridSim.h  HealthController.cc  HealthController.h  RuntimeInfo.h  Security.h  SeedController.cc  SeedController.h  WeatherController.cc  WeatherController.h  WeatherProxy.cc  WeatherProxy.h  WeatherSim.cc  WeatherSim.h  main.cc
backend/tests/: test_gridsim.cc
deploy/: weather-backend.service
deploy/logrotate/: weather-backend
deploy/nginx/: simulation.micutu.com.conf
deploy/nginx/snippets/: simulation-security-headers.conf
docs/: OPERATIONS.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ArcGauge.jsx  Atmosphere.jsx  CloudLayer.jsx  CountryBorders.jsx  EarthGlobe.jsx  EventPanel.jsx  ForecastPanel.jsx  FrontalLayer.jsx  GridOverlay.jsx  IsobarLines.jsx  LightningEffect.jsx  MetricCard.jsx  RainParticles.jsx  SearchBar.jsx  SimStats.jsx  StatusBadge.jsx  StormLabels.jsx  WeatherChart.jsx  WeatherGlobe.jsx  WeatherHUD.jsx  WeatherPopup.jsx  WindField.jsx  WindParticles.jsx
frontend/src/hooks/: useFPS.js  useGridSocket.js  useWeatherSocket.js
frontend/src/utils/: geoUtils.js
scripts/: check.sh  deploy.sh  preflight.sh  security-audit.sh
